fix #2547 - some dialogs too small

--- a/maqetta.core.client/WebContent/davinci/ui.css
+++ b/maqetta.core.client/WebContent/davinci/ui.css
@@ -583,6 +583,7 @@ img.readOnlyResource + img.treeReadOnlyLabelNode{
 	text-align: right;
 }
 .resizableDialog .dialogContent {
-	padding: 0;
+	padding-left: 0;
+	padding-top: 0;
 }
 
